# haskell-gerber

./: .gitignore  LICENSE  README.md  cabal.project  fourmolu.yaml  gerber.cabal  shell.nix  treefmt.toml
gerber/: ChangeLog.md  default.nix  gerber.cabal
gerber-diagrams/: LICENSE  Setup.hs  default.nix  gerber-diagrams.cabal
gerber-diagrams/exe/: Main.hs
gerber-diagrams/lib/Data/Gerber/: Diagrams.hs
gerber-diagrams/lib/Gerber/: Diagrams.hs
gerber-diagrams/test-data/: 2-13-1_Two_square_boxes.gbr  2-13-2_Polarities_and_Apertures.gbr  6-1-6-2_A_drill_file.gbr  SMD_prim_20.gbr  SMD_prim_21.gbr  haskell-badge-copper-bottom.gbr  haskell-badge-copper-top.gbr  haskell-badge-cutouts.gbr  haskell-badge-keepout.gbr  haskell-badge-mechanical-13.gbr  haskell-badge-mechanical-2.gbr  haskell-badge-mechanical-3.gbr  haskell-badge-mechanical-4.gbr  haskell-badge-outline.gbr  haskell-badge-silkscreen-bottom.gbr  haskell-badge-silkscreen-top.gbr  haskell-badge-solder-mask-bottom.gbr  haskell-badge-solder-mask-top.gbr  haskell-badge-stencil-bottom.gbr  haskell-badge-stencil-top.gbr  interpolation-mode-fallback.gbr  moire.gbr  sample-1-stencil-top.gbr  sample-2-copper-top-panelised.gbr  sample_macro_X1.gbr  thermal.gbr
gerber-diagrams/tests/: Main.hs
gerber-diagrams/tests/Gerber/Diagrams/: Tests.hs
gerber/lib/Data/Gerber/: Parser.hs
gerber/lib/Gerber/: ApertureDefinition.hs  Attribute.hs  Command.hs  DCodeNumber.hs  EncodedDecimal.hs  Evaluate.hs  Flash.hs  Format.hs  Grammar.hs  MacroDefinition.hs  Mirroring.hs  Movement.hs  Padding.hs  Polarity.hs  StepRepeat.hs  Unit.hs
gerber/lib/Gerber/Attribute/: AperFunction.hs  Attribute.hs  CreationDate.hs  FileFunction.hs  FilePolarity.hs  GenerationSoftware.hs  MD5.hs  Part.hs  ProjectId.hs
gerber/lib/Gerber/Attribute/FileFunction/: Copper.hs  Drill.hs  Index.hs  Mask.hs  Profile.hs  Side.hs  Types.hs
gerber/lib/Gerber/Evaluate/: Edge.hs  GraphicsState.hs
gerber/lib/Gerber/Evaluate/GraphicsState/: ApertureEntry.hs  InterpolationMode.hs  StackStream.hs
gerber/test-data/: 2-13-1_Two_square_boxes.golden  2-13-2_Polarities_and_Apertures.golden  4-11-6_Block_with_different_orientations.gbr  4-11-6_Block_with_different_orientations.golden  4-6-4_Nested_blocks.golden  6-1-6-2_A_drill_file.golden  SMD_prim_20.golden  SMD_prim_20_X1.gbr  SMD_prim_20_X1.golden  SMD_prim_21.golden  SMD_prim_21_X1.gbr  SMD_prim_21_X1.golden  interpolation-mode-fallback.gbr  sample-1-stencil-top-panelised.gbr  sample-1-stencil-top-panelised.golden  sample-2-copper-top-panelised.golden  sample-3-panel-outline.gbr  sample-3-panel-outline.golden  sample_macro.gbr  sample_macro.golden  sample_macro_X1.golden  stencil-top.gbr  stencil-top.golden
gerber/tests/: Main.hs
gerber/tests/Gerber/Evaluate/GraphicsState/StackStream/: Tests.hs
gerber/tests/Gerber/Grammar/: Tests.hs
lib/Data/: Gerber.hs
lib/Data/Gerber/: Types.hs
