name:                gerber
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
category:            Data
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Gerber
                     , Data.Gerber.Parser
                     , Data.Gerber.Types
  other-extensions:    TypeFamilies
                     , RecordWildCards
                     , NoMonomorphismRestriction
                     , FlexibleContexts
                     , OverloadedStrings
                     , TupleSections
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , PatternSynonyms
                     , RankNTypes
                     , ScopedTypeVariables
                     , ConstraintKinds
                     , PartialTypeSignatures
  build-depends:       base >=4.10 && <4.11
                     , containers >=0.5 && <0.6
                     , lens >=4.15 && <4.16
                     , linear >=1.20 && <1.21
                     , megaparsec >=6.3 && <6.4
                     , mtl >=2.2 && <2.3
                     , pretty-show >=1.6 && <1.7
                     , recursion-schemes >=5.0 && <5.1
                     , text >=1.2 && <1.3
                     , transformers >=0.5 && <0.6
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
