cabal-version:      2.4
name:               gerber-diagrams
version:            0.5.0.0
license:            MIT
license-file:       LICENSE
author:             Oliver Charles
maintainer:         ollie@ocharles.org.uk
category:           Data
build-type:         Simple
extra-source-files: ChangeLog.md
extra-source-files:
  test-data/**/*.gbr
  test-data/**/*.png

library
  exposed-modules:  Gerber.Diagrams
  build-depends:
    , base              >=4.17 && <4.21
    , diagrams-contrib  >=1.4  && <1.5
    , diagrams-lib      >=1.4  && <1.6
    , gerber            >=0.6  && <0.7
    , linear            >=1.22 && <1.24

  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-deriving-strategies
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-missing-kind-signatures -Wno-missing-role-annotations
    -Wno-missed-specialisations -Wno-name-shadowing -Wno-partial-fields

executable render-gerbers
  hs-source-dirs:   exe
  build-depends:
    , base                  >=4.17 && <4.21
    , diagrams-gi-cairo     >=1.4  && <1.6
    , diagrams-lib          >=1.4  && <1.6
    , foldl                 >=1.4  && <1.5
    , gerber
    , gerber-diagrams
    , optparse-applicative  >=0.17 && <0.19
    , rio                   >=0.1  && <0.2
    , text                  >=2.0  && <2.2

  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          Main.hs

test-suite tests
  build-depends:
    , base              >=4.17 && <4.21
    , bytestring        >=0.11 && <0.13
    , containers        >=0.6  && <0.8
    , diagrams-cairo    >=1.4  && <1.6
    , diagrams-lib      >=1.4  && <1.6
    , directory         >=1.3  && <1.4
    , foldl             >=1.4  && <1.5
    , generic-deriving  >=1.14 && <1.15
    , gerber
    , gerber-diagrams
    , linear            >=1.22 && <1.24
    , megaparsec        >=9.3  && <9.8
    , monoid-extras     >=0.6  && <0.8
    , pretty-show       >=1.10 && <1.11
    , tasty             >=1.4  && <1.6
    , tasty-golden      >=2.3  && <2.4
    , text              >=2.0  && <2.2

  main-is:          Main.hs
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  other-modules:    Gerber.Diagrams.Tests
  ghc-options:      -Wall
