cabal-version:      2.4
name:               gerber
version:            0.5.0.0
license:            MIT
license-file:       LICENSE
author:             Oliver Charles
maintainer:         ollie@ocharles.org.uk
category:           Data
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

extra-source-files:
  test-data/**/*.gbr
  test-data/**/*.golden

library
  exposed-modules:
    Gerber.ApertureDefinition
    Gerber.Attribute
    Gerber.Attribute.AperFunction
    Gerber.Attribute.Attribute
    Gerber.Attribute.CreationDate
    Gerber.Attribute.FileFunction
    Gerber.Attribute.FileFunction.Copper
    Gerber.Attribute.FileFunction.Drill
    Gerber.Attribute.FileFunction.Index
    Gerber.Attribute.FileFunction.Mask
    Gerber.Attribute.FileFunction.Profile
    Gerber.Attribute.FileFunction.Side
    Gerber.Attribute.FilePolarity
    Gerber.Attribute.GenerationSoftware
    Gerber.Attribute.MD5
    Gerber.Attribute.Part
    Gerber.Attribute.ProjectId
    Gerber.Command
    Gerber.DCodeNumber
    Gerber.EncodedDecimal
    Gerber.Evaluate
    Gerber.Evaluate.Edge
    Gerber.Evaluate.GraphicsState
    Gerber.Evaluate.GraphicsState.ApertureEntry
    Gerber.Evaluate.GraphicsState.InterpolationMode
    Gerber.Evaluate.GraphicsState.StackStream
    Gerber.Flash
    Gerber.Format
    Gerber.Grammar
    Gerber.MacroDefinition
    Gerber.Mirroring
    Gerber.Movement
    Gerber.Padding
    Gerber.Polarity
    Gerber.StepRepeat
    Gerber.Unit

  build-depends:
    , base               >=4.17 && <4.21
    , base16-bytestring  >=1.0  && <1.1
    , bytestring         >=0.11 && <0.13
    , containers         >=0.6  && <0.8
    , foldl              >=1.4  && <1.5
    , generic-deriving   >=1.14 && <1.15
    , linear             >=1.22 && <1.24
    , megaparsec         >=9.3  && <9.8
    , monoid-extras      >=0.6  && <0.8
    , mtl                >=2.2  && <2.4
    , text               >=2.0  && <2.2
    , time               >=1.12 && <1.13
    , uuid-types         >=1.0  && <1.1

  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-deriving-strategies
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-unsafe -Wno-safe -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-missing-kind-signatures -Wno-missing-role-annotations
    -Wno-missed-specialisations -Wno-name-shadowing -Wno-partial-fields

test-suite tests
  build-depends:
    , base              >=4.17 && <4.21
    , bytestring        >=0.11 && <0.13
    , containers        >=0.6  && <0.8
    , directory         >=1.3  && <1.4
    , foldl             >=1.4  && <1.5
    , generic-deriving  >=1.14 && <1.15
    , gerber
    , hedgehog          >=1.2  && <1.6
    , hedgehog-classes  >=0.2  && <0.3
    , linear            >=1.22 && <1.24
    , megaparsec        >=9.3  && <9.8
    , monoid-extras     >=0.6  && <0.8
    , pretty-show       >=1.10 && <1.11
    , tasty             >=1.4  && <1.6
    , tasty-golden      >=2.3  && <2.4
    , tasty-hedgehog    >=1.4  && <1.5
    , text              >=2.0  && <2.2

  main-is:          Main.hs
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  other-modules:
    Gerber.Evaluate.GraphicsState.StackStream.Tests
    Gerber.Grammar.Tests

  ghc-options:      -Wall
